# TerminalEvent

./: .gitignore  CMakeLists.txt  README.md  cpp_terminal_event_backend_mvp_plan_v3.md  moon.mod  moon.mod.json  moon.work
examples/counter/: README.md
examples/list/: README.md
include/lte/: c_api.h  input_parser.hpp  input_reader.hpp  native_event.hpp  terminal_session.hpp
moonbit/lte/: backend.mbt  event.mbt  moon.pkg.json
moonbit/lte_lunartui/: adapter.mbt  event_source.mbt  moon.pkg.json
moonbit/lte_native/: ffi.mbt  moon.pkg  moon.pkg.json  native_stub.cpp
src/: c_api.cpp  input_parser.cpp  input_reader.cpp  native_event.cpp  terminal_session.cpp
tests/: c_api_smoke_test.cpp  parser_test.cpp
